// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > custom body after 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        <script src="foo"/>
      </body>
    </html>
  "
`;

exports[`template > custom body before 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        <script src="fooBefore"/><script src="barBefore"/>
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > custom render 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > custom title 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title>foo title</title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > meta scripts 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        <style>.someclass{font-size:10px;}</style>
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;
